--- a/src/Components/Auth/signup.module.css
+++ b/src/Components/Auth/signup.module.css
@@ -41,13 +41,13 @@ h2 {
 
 
 
-.input-box {
+.input {
     position: relative;
     width: 320px;
     margin: 30px 0;
 }
 
-.input-box input {
+.input input {
     width: 100%;
     height: 50px;
     border-radius: 7px;
@@ -63,7 +63,7 @@ h2 {
 
 
 
-.forgot-password {
+.forgot{
     margin: -15px 0 15px;
   
 }
@@ -71,7 +71,7 @@ h2 {
 
 
 
-button {
+.button {
     position: relative;
     width: 100%;
     height: 45px;
@@ -89,13 +89,13 @@ button {
 }
 
 
-.registration-link {
+.registration {
     font-size: .9em;
     text-align: center;
     margin: 25px 0;
 }
 
-.registration-link p a {
+.registration p a {
     
     text-decoration: none;
     font-weight: 600;
