--- a/src/Components/RecivedMails/inbox.module.css
+++ b/src/Components/RecivedMails/inbox.module.css
@@ -55,3 +55,19 @@
     border-radius: 100%;
     margin-left: 10px;
 }
+.button {
+    position: relative;
+   margin-left: 20px;
+ 
+    height: 25px;
+    color: white;
+
+    border:2px solid Black;
+    border-radius: 5px;
+
+    font-size: 1em;
+    background-color: brown;
+    font-weight: 500;
+    transition: 0.5s;
+
+}
