--- a/src/Components/Auth/signup.module.css
+++ b/src/Components/Auth/signup.module.css
@@ -76,7 +76,7 @@ h2 {
     width: 100%;
     height: 45px;
     color: white;
-   
+   cursor: pointer;
     border: none;
     outline: none;
     border-radius: 5px;
@@ -95,9 +95,8 @@ h2 {
     margin: 25px 0;
 }
 
-.registration p a {
-    
-    text-decoration: none;
-    font-weight: 600;
-    transition: 0.5s;
+
+.change{
+    cursor: pointer;
+    color: blue;
 }
